Add support multi sections. (#8)
Add test's for LiteMultiSection.
Add test's for messages.
Refactor implementations of LiteComponent.